# vlerick-mai-nlp-2025

./: .gitignore  Ch0 - Install dependencies and download models.ipynb  Ch1 - BOW - ESG categories.ipynb  Ch2 - ESG Categories - Using word embeddings.ipynb  Ch2 - Word arithmetic.ipynb  Ch2.1 - Transformers - Tokenizer.ipynb  Ch2.1 - Word arithmetic.ipynb  Ch2.2 - ESG Categories - Using word embeddings.ipynb  Ch2.2 - Word embeddings.ipynb  Ch2.3 - Word arithmetic.ipynb  Ch3 - ESG Categories - Using word embeddings.ipynb  Ch3.1 - ESG Categories - Using word embeddings.ipynb  Ch3.2 - Sentence embeddings - 2. ESG Categories - BGE.ipynb  Ch4 - Sentence embeddings - 1. Intro and retrieval.ipynb  Ch4 - Sentence embeddings - 2. ESG Categories .ipynb  Ch5 - AI agent step by step.ipynb  Ch5 - Workflows.ipynb  Ch5 AI agent step by step.ipynb  experiment_log.md  main.py  pyproject.toml
example data/: financial-topics-csv.txt
vectorstore/: index.faiss  index.pkl
