[project]
name = "vlerick-mai-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic==0.38.0",
    "duckduckgo-search>=7.5.1",
    "faiss-cpu>=1.10.0",
    "httpx==0.27.2",
    "jupyter>=1.1.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langgraph>=0.3.5",
    "pandas>=2.2.3",
    "pypdf>=5.3.1",
    "sentence-transformers>=3.4.1",
]
